# myfl

./: .gitignore  Makefile  README.md  export_open_api.py  mkdocs.yml  pyproject.toml  sample_project.py
.github/workflows/: github_pages.yml  tests.yml
docs/: clients.md  code_reading.md  glossary.md  index.md  installation.md  research.md  tech_selection.md
docs/openapi/: api.html  openapi.json
myfl/: __init__.py  __main__.py  clients.py  config.py  pkg.py
myfl/api/: __init__.py
myfl/builders/: __init__.py  api.py  cli.py  protocols.py
myfl/cli/: __init__.py
myfl/clients/: __init__.py  local.py
myfl/clients/pytorch/: __init__.py
myfl/core/: __init__.py  config.py  decorators.py  exceptions.py  protocols.py  workspaces.py
myfl/impl/: git.py
myfl/models/: __init__.py
myfl_old/: __init__.py  api.py  functions.py  server_config.py  server_factories.py  utils.py
myfl_old/cli/: __init__.py  mkdoc.py  utils.py
myfl_old/clients/: __init__.py  domain.py
myfl_old/core/: __init__.py  data_loaders.py  exceptions.py  federators.py  manager.py  manager_trainer.py  model_loaders.py  params.py  store.py  trainer.py  workers.py  workspace.py
myfl_old/core/communicators/: __init__.py  abc.py  client.py  server.py
myfl_old/loader/: __init__.py
myfl_old/servers/: (未使用っぽい)domain.py
tests/: test_cli.py  test_train.py
